Refactored Extractor#postProcessing API
Previously, the API implied that the return value is relevant while the
implementations were editing the list itself. There were two usages:
one relying on the returned list, one relying on the list being edited.
Now it is clear: the list can be edited if needed.